# Crypto_poll

./: .env  Cargo.toml  README.md  diesel.toml
migrations/: 20231001000000_create_polls.sql  20240101000000_create_polls.sql  20250126165858_create_votes_table.sql  20250127115339_create_poll_tables.sql  20250204182421_fix_foreign_key_constraint.sql
src/: binance.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs  poll.rs  routes.rs  services.rs
