[package]
name = "poll-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.3", features = ["postgres", "uuid", "chrono", "json", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # Added for JSON handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors"] }  # Removed compression
dotenvy = "0.15"
http = "1.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-server = "0.7.1"